--- a/index.html
+++ b/index.html
@@ -1,59 +1,2 @@
 <!DOCTYPE html>
-<!-- saved from url=(0018)http://shayden.co/ -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
- 
-<script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript">
-//<![CDATA[
-try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok3v=1613a3a185/"},atok:"a778f1ad0b572391f5934eb54198caa2",petok:"7a0ab92b72751954d451f76ac51ebf0adb6841c6-1465603295-1800",zone:"shayden.co",rocket:"a",apps:{"ga_key":{"ua":"UA-65633828-1","ga_bs":"2"}},sha2test:0}];document.write('<script type="text/javascript" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=e982913d31/cloudflare.min.js"><'+'\/script>');}}catch(e){};
-//]]>
-</script><script type="text/javascript" src="./shayden.co_files/cloudflare.min.js"></script><style type="text/css">.cf-hidden { display: none; } .cf-invisible { visibility: hidden; }</style><script data-module="cloudflare/rocket" id="cfjs_block_a110f9df41" onload="CloudFlare.__cfjs_block_a110f9df41_load()" onerror="CloudFlare.__cfjs_block_a110f9df41_error()" onreadystatechange="CloudFlare.__cfjs_block_a110f9df41_readystatechange()" type="text/javascript" src="./shayden.co_files/rocket.js"></script>
-<link rel="stylesheet" href="./shayden.co_files/materialize.min.css">  
- 
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<script type="text/javascript">
-/* <![CDATA[ */
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-65633828-1']);
-_gaq.push(['_trackPageview']);
-
-(function() {
-var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
-
-(function(b){(function(a){"__CF"in b&&"DJS"in b.__CF?b.__CF.DJS.push(a):"addEventListener"in b?b.addEventListener("load",a,!1):b.attachEvent("onload",a)})(function(){"FB"in b&&"Event"in FB&&"subscribe"in FB.Event&&(FB.Event.subscribe("edge.create",function(a){_gaq.push(["_trackSocial","facebook","like",a])}),FB.Event.subscribe("edge.remove",function(a){_gaq.push(["_trackSocial","facebook","unlike",a])}),FB.Event.subscribe("message.send",function(a){_gaq.push(["_trackSocial","facebook","send",a])}));"twttr"in b&&"events"in twttr&&"bind"in twttr.events&&twttr.events.bind("tweet",function(a){if(a){var b;if(a.target&&a.target.nodeName=="IFRAME")a:{if(a=a.target.src){a=a.split("#")[0].match(/[^?=&]+=([^&]*)?/g);b=0;for(var c;c=a[b];++b)if(c.indexOf("url")===0){b=unescape(c.split("=")[1]);break a}}b=void 0}_gaq.push(["_trackSocial","twitter","tweet",b])}})})})(window);
-/* ]]> */
-</script>
-</head>
-<body>
-<nav class="indigo darken-4">
-<div class="nav-wrapper">
- 
- 
-<ul class="right hide-on-med-and-down">
-<li><a href="http://shayden.co/about.html">About</a></li>
-</ul>
- 
-<a href="http://shayden.co/#" data-activates="side-menu"><i class="mdi-navigation-menu"></i></a>
- 
- 
-<ul class="side-nav" id="side-menu">
-<li><a href="http://shayden.co/about.html">About</a></li>
-</ul>
-</div>
-</nav>
- 
-<script data-rocketsrc="http://code.jquery.com/jquery-latest.js" type="text/rocketscript" data-rocketoptimized="true"></script>
- 
-<script data-rocketsrc="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js" type="text/rocketscript" data-rocketoptimized="true"></script>
-<script type="text/rocketscript" data-rocketoptimized="true">
- $(document).ready(function(){
-   // Activate the side menu 
-   $(".button-collapse").sideNav();
-  });
-</script>
-
-
-<div class="hiddendiv common"></div></body></html>
+<p>memes</p>
